--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@ paginate: 5
 plugins: [jekyll-paginate]
 port: 4000
 safe: true
-url: http://jekyller.github.io/vitae
+url: http://csqlwang.github.io/homepage/
 author: Fábio Madeira
 
 # edit this section with your information
 # jekyller.github.io - all contents run on /vitae/
 # for a normal use at the base of the server change it to "/"
-baseurl: /qlw/
+baseurl: /homepage/
 title: Homepage of Qilong Wang
 name: Qilong Wang
 email: qlwang@tju.edu.cn
